--- a/src/main/resources/templates/list-filerepository.html
+++ b/src/main/resources/templates/list-filerepository.html
@@ -19,7 +19,7 @@
 			
 			<hr/>
 			<br/><br/>
-			<table class="table table-bordered table-striped" id="employeeTable">
+			<table class="table table-bordered table-striped" id="filerepositoryTable">
 			
 				<thead>
 					<tr>
@@ -49,7 +49,7 @@
 		<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js"></script>
 		<script>
 			$(document).ready(function() {
-				$("#employeeTable").DataTable({
+				$("#filerepositoryTable").DataTable({
 						'aoColumnDefs': [{
         				'bSortable': false,
         				'aTargets': [-1] /* 1st one, start by the right */
